--- a/index.html
+++ b/index.html
@@ -195,11 +195,9 @@
         <div id="Projects">
           <!-- Inicio de los proyectos -->
           <div class="Projects__Item">
-            <div class="project-device-with-shape">
-                <div class="label">
-                  <img src="assets/img/projects/dot.svg" alt="Carnaval de Barranquilla">
-                  PROYECTOS
-                </div>
+            <img src="/assets/svg/PROYECTOS.svg" alt="Projects background" class="Projects__Cover">
+            <div class="Portal out">
+              <img src="/assets/svg/PORTAL/PORTAL ENTRADA 2.svg" alt="Portal mask" class="Portal__mask">
             </div>
           </div>
           <!-- Carnaval -->
@@ -378,6 +376,7 @@
     </div>
   </div>
   <script src="js/jquery-3.4.1.min.js"></script>
+  <!-- <script src="js/prevent-scroll.js"></script> -->
   <script src="js/app.js"></script>
 </body>
 </html>
