--- a/index.html
+++ b/index.html
@@ -196,9 +196,6 @@
           <!-- Inicio de los proyectos -->
           <div class="Projects__Item">
             <img src="/assets/svg/PROYECTOS.svg" alt="Projects background" class="Projects__Cover">
-            <div class="Portal out">
-              <img src="/assets/svg/PORTAL/PORTAL ENTRADA 2.svg" alt="Portal mask" class="Portal__mask">
-            </div>
           </div>
           <!-- Carnaval -->
           <div class="Projects__Item">
@@ -207,6 +204,7 @@
                 <img src="assets/img/projects/dot.svg" alt="Carnaval de Barranquilla">
                 Carnaval de Barranquilla
               </div>
+              <div class="category">App móvil</div>
               <div class="text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quia quibusdam esse quae sit, eos laudantium molestias dolores omnis, reprehenderit mollitia aliquam aspernatur dolore labore distinctio accusamus, nobis quo dignissimos.
               </div>
@@ -220,14 +218,15 @@
           <div class="Projects__Item">
             <div class="project-device-with-shape transmetro enterFromLeft">
               <img src="assets/img/projects/Transmetro/device.png" alt="Transmetro" class="device">
-              <img src="assets/svg/PROJECTS/Transmetro 1.svg" alt="Logo Transmetro" style="max-height: 40vh; position: relative; top: 10%; left: -30%; z-index: 0; width: 100%; transform: scale(1.4); transform-origin: top;" class="figure-1">
-              <img src="assets/svg/PROJECTS/Transmetro 2.svg" alt="Logo Transmetro" style="max-height: 40vh; position: absolute; top: 25%; right: -30%; z-index: 0; width: 100%; transform: scale(1.4); transform-origin: top;" class="figure-">
+              <img src="assets/svg/PROJECTS/Transmetro 1.svg" alt="Logo Transmetro" class="figure figure-1">
+              <img src="assets/svg/PROJECTS/Transmetro 2.svg" alt="Logo Transmetro" class="figure figure-2">
             </div>
             <div class="project-description">
               <div class="label">
                 <img src="assets/img/projects/dot.svg" alt="Transmetro">
                 Transmetro
               </div>
+              <div class="category">Web</div>
               <div class="text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quia quibusdam esse quae sit, eos laudantium molestias dolores omnis, reprehenderit mollitia aliquam aspernatur dolore labore distinctio accusamus, nobis quo dignissimos.
               </div>
@@ -240,6 +239,7 @@
                 <img src="assets/img/projects/dot.svg" alt="Super E Procaps">
                 Super E Procaps
               </div>
+              <div class="category">Video</div>
               <div class="text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quia quibusdam esse quae sit, eos laudantium molestias dolores omnis, reprehenderit mollitia aliquam aspernatur dolore labore distinctio accusamus, nobis quo dignissimos.
               </div>
@@ -253,14 +253,15 @@
           <div class="Projects__Item">
             <div class="project-device-with-shape colmed">
               <img src="assets/img/projects/Colmed/device.png" alt="Colmed" class="device">
-              <img src="assets/img/projects/Colmed/boxes.svg" alt="Colmed" class="boxes box-1">
-              <img src="assets/img/projects/Colmed/boxes.svg" alt="Colmed" class="boxes box-2">
+              <img src="assets/img/projects/Colmed/boxes-1.svg" alt="Colmed" class="boxes box-1 figure">
+              <img src="assets/img/projects/Colmed/boxes-2.svg" alt="Colmed" class="boxes box-2 figure">
             </div>
             <div class="project-description enterFromLeft">
               <div class="label">
                 <img src="assets/img/projects/dot.svg" alt="Colmed">
                 Colmed
               </div>
+              <div class="category">App móvil</div>
               <div class="text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quia quibusdam esse quae sit, eos laudantium molestias dolores omnis, reprehenderit mollitia aliquam aspernatur dolore labore distinctio accusamus, nobis quo dignissimos.
               </div>
@@ -273,6 +274,7 @@
                 <img src="assets/img/projects/dot.svg" alt="GSP">
                 GSP
               </div>
+              <div class="category">Web</div>
               <div class="text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quia quibusdam esse quae sit, eos laudantium molestias dolores omnis, reprehenderit mollitia aliquam aspernatur dolore labore distinctio accusamus, nobis quo dignissimos.
               </div>
@@ -289,8 +291,9 @@
             <div class="project-description">
               <div class="label">
                 <img src="assets/img/projects/dot.svg" alt="Tránsito Alcaldía de Barranquilla">
-                Tránsito Alcaldía de Barranquilla
+                Secretaría de Tránsito
               </div>
+              <div class="category">Video</div>
               <div class="text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quia quibusdam esse quae sit, eos laudantium molestias dolores omnis, reprehenderit mollitia aliquam aspernatur dolore labore distinctio accusamus, nobis quo dignissimos.
               </div>
@@ -298,17 +301,18 @@
           </div>
           <!-- Olímpica -->
           <div class="Projects__Item">
+            <img src="assets/svg/PROJECTS/Lineas.png" alt="Olímpica" class="waves">
             <div class="project-description">
               <div class="label">
                 <img src="assets/img/projects/dot.svg" alt="Olímpica Estéreo">
-                Olímpica Estéreo
+                Olímpica Stereo
               </div>
+              <div class="category">App móvil</div>
               <div class="text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quia quibusdam esse quae sit, eos laudantium molestias dolores omnis, reprehenderit mollitia aliquam aspernatur dolore labore distinctio accusamus, nobis quo dignissimos.
               </div>
             </div>
             <div class="project-device-with-shape olimpica enterFromRight">
-              <!-- <img src="assets/svg/PROJECTS/CORTADAS.svg" alt="Olímpica" class="waves"> -->
               <img src="assets/svg/PROJECTS/OLIMPICA.png" alt="Logo Transmetro" class="device">
             </div>
           </div>
@@ -325,8 +329,8 @@
             <li><img src="assets/img/customers/Procaps.svg" alt="Procaps"></li>
             <li><img src="assets/img/customers/Alcaldia.svg" alt="Alcaldía de Barranquilla"></li>
           </ul>
+          <img src="/assets/svg/CONTACTO/fondo 2.svg" alt="Cool contact globe!" class="cool-globe">
         </div>
-        <div style="background: url('assets/svg/CONTACTO/fondo 2.svg'); background-repeat: no-repeat;"></div>
         <div id="Contact" style="position: relative; background: white;">
           <footer>
             <div class="Footer__Content">
