--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="css/services.css">
   <link rel="stylesheet" href="css/app.css">
   <link rel="stylesheet" href="css/customers.css">
+  <link rel="stylesheet" href="css/planets.css">
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/queries.css">
 </head>
@@ -199,6 +200,8 @@
           </div>
           <!-- Carnaval -->
           <div class="Projects__Item">
+            <img src="/assets/svg/PLANETS/PLANETA INFRA.svg" alt="A random planet" class="big-planet">
+            <img src="assets/svg/DETALLES/LINEA.svg" alt="Orbit" class="orbit">
             <div class="project-description">
               <div class="label">
                 <img src="assets/img/projects/dot.svg" alt="Carnaval de Barranquilla">
@@ -216,6 +219,8 @@
           </div>
           <!-- Transmetro -->
           <div class="Projects__Item">
+            <img src="/assets/svg/PLANETS/PLANETA.svg" alt="A random planet" class="transmetro-planet">
+            <img src="/assets/svg/DETALLES/PUNTO AMARILLO.svg" alt="A random planet" class="transmetro-dot-planet">
             <div class="project-device-with-shape transmetro enterFromLeft">
               <img src="assets/img/projects/Transmetro/device.png" alt="Transmetro" class="device">
               <img src="assets/svg/PROJECTS/Transmetro 1.svg" alt="Logo Transmetro" class="figure figure-1">
@@ -234,6 +239,9 @@
           </div>
           <!-- Procaps -->
           <div class="Projects__Item">
+            <img src="/assets/svg/DETALLES/LINEA.svg" alt="Orbit" class="another-orbit">
+            <img src="/assets/svg/PLANETS/PLANETA.svg" alt="Random planet" class="procaps-planet">
+            <img src="/assets/svg/PLANETS/PLANETA INFRA.svg" alt="Random planet" class="procaps-dot-planet">
             <div class="project-description">
               <div class="label">
                 <img src="assets/img/projects/dot.svg" alt="Super E Procaps">
@@ -251,6 +259,8 @@
           </div>
           <!-- Colmed -->
           <div class="Projects__Item">
+            <img src="/assets/svg/DETALLES/PUNTO AMARILLO.svg" alt="Dot planet" class="colmed-dot-planet">
+            <img src="/assets/svg/PLANETS/PLANETA INFRA.svg" alt="Random planet" class="colmed-planet">
             <div class="project-device-with-shape colmed">
               <img src="assets/img/projects/Colmed/device.png" alt="Colmed" class="device">
               <img src="assets/img/projects/Colmed/boxes-1.svg" alt="Colmed" class="boxes box-1 figure">
