--- a/index.html
+++ b/index.html
@@ -279,6 +279,8 @@
           </div>
           <!-- GSP -->
           <div class="Projects__Item">
+            <img src="/assets/svg/PLANETS/PLANETA.svg" alt="Random planet" class="gsp-random-planet">
+            <img src="/assets/svg/DETALLES/PUNTO AMARILLO.svg" alt="Random planet" class="gsp-dot-planet">
             <div class="project-description">
               <div class="label">
                 <img src="assets/img/projects/dot.svg" alt="GSP">
@@ -295,6 +297,9 @@
           </div>
           <!-- Tránsito de Barranquilla -->
           <div class="Projects__Item">
+            <img src="/assets/svg/DETALLES/LINEA.svg" alt="Orbit" class="transito-orbit">
+            <img src="/assets/svg/PLANETS/PLANETA INFRA.svg" alt="Random planet" class="transito-planet">
+            <img src="/assets/svg/DETALLES/PUNTO AMARILLO.svg" alt="Random planet" class="transito-dot-planet">
             <div class="project-device-with-shape transito enterFromLeft">
               <img src="assets/img/projects/transito/video.png" alt="Tránsito de Barranquilla" class="video">
             </div>
